SecurityConfig fix